--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,44 +6,12 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇵🇹_PT_葡萄牙
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 5.182.39.27
-    port: 80
+    server: go.gujuji.top
+    port: 8080
     cipher: auto
-    uuid: ffa054fd-602e-4a72-b4b1-90902479ba9d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-  - &id002
-    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 183.232.238.77
-    port: 10010
-    cipher: auto
-    uuid: ab537195-b74c-3df5-a3a1-d504345e80bb
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 54.228.248.26
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度
-    type: vmess
-    server: mm3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: bfc47c55-d946-46ca-b09f-5a1b91bae105
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -51,136 +19,51 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mm3.shabijichang.com
-  - &id005
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+        host: us-02.gujuji.top
+  - &id002
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
-    server: frsadubidd.76898102.xyz
-    port: 2095
+    server: 104.21.4.8
+    port: 2082
     cipher: auto
-    uuid: 54e78c8e-2c4c-301e-bc5d-bb27409a240a
+    uuid: 566b5797-cc52-4417-e25e-25a9fb15e7d4
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
+      path: /LOCKEY_VPN
       headers:
-        host: frsadubids.76898102.xyz
-  - &id006
-    name: 🇺🇸_US_美国_1
+        host: al.zmV2ray.site
+  - &id003
+    name: 🇮🇳_IN_印度
     type: vmess
-    server: cf-lt.sharecentre.online
+    server: 103.113.68.233
     port: 80
     cipher: auto
-    uuid: 2a683a54-f098-4d98-92fc-762b85d907b9
+    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /vmess
       headers:
-        host: ssrsub.v006.ssrsub.com
-  - &id007
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: trojan-panel.alphav.top
-    port: 37138
-    cipher: auto
-    uuid: d56fd71b-f819-43fd-a61d-3593d742d682
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-  - &id008
+        host: 103.113.68.233
+  - &id004
     name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 5.161.155.22
-    port: 443
-    cipher: auto
-    uuid: 3d1fab6e-3bd6-472b-8d9c-9934c04eaf40
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id009
-    name: 🇫🇷_FR_法国
-    type: trojan
-    server: 141.94.221.127
-    port: 80
-    udp: true
-    password: bc00d34b-48be-422a-b8ec-2820fce5de80
-    sni: fr1-t.sshmax.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国_3
     type: vmess
     server: tttt.ssfree.ru
     port: 443
     cipher: auto
-    uuid: 03c3770e-91f5-11ee-b91c-00163e49219e
+    uuid: 2e9c065c-92be-11ee-8580-00163e49219e
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /search
-  - &id011
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: us-02.jikuai.xyz
-    port: 2082
-    cipher: auto
-    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us-02.jikuai.xyz
-  - &id012
-    name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国
-    type: vmess
-    server: 158.58.188.21
-    port: 20440
-    cipher: auto
-    uuid: 13f80f39-4724-473d-aed0-8331b133ae2c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-  - &id013
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: cf3.yydsii.com
-    port: 80
-    cipher: auto
-    uuid: 9edb5c77-8818-4780-9cef-d81b7e2d932b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: usyx.651568.xyz
-  - &id014
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 158.101.7.8
-    port: 80
-    cipher: auto
-    uuid: 95b45c49-f5c0-4959-bb64-2b8fbc4a869c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id015
+  - &id005
     name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
     server: ld2.shabijichang.com
@@ -195,13 +78,141 @@ proxies:
       path: /
       headers:
         host: ld2.shabijichang.com
+  - &id006
+    name: 🇺🇸_US_美国_3
+    type: trojan
+    server: 89.116.180.179
+    port: 443
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: p6us4.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us4
+  - &id007
+    name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+    type: vmess
+    server: 158.58.188.21
+    port: 20440
+    cipher: auto
+    uuid: 13f80f39-4724-473d-aed0-8331b133ae2c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id008
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: sbl2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id009
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10850
+    udp: true
+    password: 6deb9e24-4041-41e3-827b-392b16aa496e
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id011
+    name: 🇰🇷_KR_韩国_1
+    type: trojan
+    server: hk3.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 20252
+    udp: true
+    password: 56a00699-1857-46ac-a861-60d3c17e1b9f
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇰🇷_KR_韩国_2
+    type: trojan
+    server: hk2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 20202
+    udp: true
+    password: 5582a559-d68a-484b-bc33-4274bf63c71a
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id013
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 80
+    cipher: auto
+    uuid: 2a683a54-f098-4d98-92fc-762b85d907b9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v006.ssrsub.com
+  - &id014
+    name: 🇯🇵_JP_日本
+    type: vmess
+    server: 103.35.188.226
+    port: 80
+    cipher: auto
+    uuid: 098e7cdd-03b4-435d-8c41-ea608fa637c2
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 103.35.188.226
+  - &id015
+    name: 🇷🇸_RS_塞尔维亚
+    type: vmess
+    server: 45.89.55.147
+    port: 80
+    cipher: auto
+    uuid: 4c2dbe94-833b-476c-910b-af8b5f3c0123
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
   - &id016
     name: 🇺🇸_US_美国_7
     type: vmess
-    server: v4.cfnode.eu.org
+    server: cfyx3.freeapp.buzz
     port: 80
     cipher: auto
-    uuid: 9edb5c77-8818-4780-9cef-d81b7e2d932b
+    uuid: a5319baa-e846-43c7-91c2-d67a1e307c8b
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -209,85 +220,181 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: usyx.651568.xyz
+        host: icu2.mac2win.top
   - &id017
-    name: 🇮🇷_IR_伊朗->🇫🇮_FI_芬兰_1
+    name: 🇺🇸_US_美国_8
     type: vmess
-    server: 158.58.188.19
-    port: 39833
+    server: usd.yj2022.gq
+    port: 8880
     cipher: auto
-    uuid: fafcfd85-ed8c-406b-f71a-bebe799a3db1
+    uuid: 4b5e4565-322f-4223-a891-78a84f189726
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /XSjeg73o6ZdsheahCb5JG
+      headers:
+        host: usd.yj2022.gq
+  - &id018
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10837
+    udp: true
+    password: 6deb9e24-4041-41e3-827b-392b16aa496e
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 104.21.40.162
+    port: 443
+    cipher: auto
+    uuid: d196ccc9-db42-475d-a7e4-7c27a6a326d1
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: be1.xv2ray.net
+  - &id020
+    name: 🇸🇪_SE_瑞典
+    type: vmess
+    server: 94.131.98.90
+    port: 80
+    cipher: auto
+    uuid: 0814badf-f3fc-4f15-b400-4ae8cdce610e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id021
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 80
+    cipher: auto
+    uuid: 2a683a54-f098-4d98-92fc-762b85d907b9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id022
+    name: 🇺🇦_UA_乌克兰
+    type: vmess
+    server: 45.87.155.70
+    port: 80
+    cipher: auto
+    uuid: 88c0a1fb-fc4d-4eab-85c7-4dd84407e9a5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 45.87.155.70
+  - &id023
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 89.221.224.12
+    port: 80
+    cipher: auto
+    uuid: 3bc3514c-cbcb-4b08-9797-c62850ae8bb4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id024
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国
+    type: vmess
+    server: nice2.xn-w1yu8o.xyz
+    port: 80
+    cipher: auto
+    uuid: a5319baa-e846-43c7-91c2-d67a1e307c8b
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-  - &id018
-    name: 🇰🇷_KR_韩国->🇮🇳_IN_印度
+      headers:
+        host: icu2.mac2win.top
+  - &id025
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: trojan
+    server: other.kunlun-ppg.com
+    port: 10838
+    udp: true
+    password: 6deb9e24-4041-41e3-827b-392b16aa496e
+    sni: alibaba-node.cn
+    skip-cert-verify: true
+    network: tcp
+  - &id026
+    name: 🇬🇧_GB_英国
+    type: trojan
+    server: 13.43.245.105
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id027
+    name: 🇺🇸_US_美国_11
     type: vmess
-    server: jp.cloudflarest.link
+    server: 95.164.46.154
     port: 8080
     cipher: auto
-    uuid: 9edb5c77-8818-4780-9cef-d81b7e2d932b
+    uuid: 431fda16-e0f8-4884-b4fd-965f03f86471
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /vmess
+  - &id028
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    type: vmess
+    server: 104.18.202.232
+    port: 8880
+    cipher: auto
+    uuid: e4831af7-c578-45b5-b9b6-a8bbd6d019c9
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /@vpn_whal,@vpn_whal
       headers:
-        host: us-1.651568.xyz
-  - &id019
-    name: 🇳🇱_NL_荷兰
+        host: gr-allnetwork.whaleproject.tech
+  - &id029
+    name: 🇺🇸_US_美国_12
     type: vmess
-    server: 188.114.96.2
-    port: 443
+    server: singapore.com
+    port: 80
     cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 1
-    tls: true
+    uuid: 2a683a54-f098-4d98-92fc-762b85d907b9
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: linkvws
+      path: /api/v3/download.getFile
       headers:
-        host: ophelia.mom
-  - &id020
-    name: 🇮🇷_IR_伊朗->🇫🇮_FI_芬兰_2
-    type: vmess
-    server: 158.58.188.19
-    port: 16025
-    cipher: auto
-    uuid: 08a5d12a-f4cb-43d6-b771-b6b902d14620
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id021
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
-    type: vmess
-    server: v6.heduian.online
-    port: 30866
-    cipher: auto
-    uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484
-    alterId: 2
-    tls: false
-    skip-cert-verify: true
-    network: ws
-  - &id022
-    name: 🇬🇧_GB_英国
-    type: vmess
-    server: 172.99.190.109
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
+        host: ssrsub.v005.ssrsub.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -336,6 +443,13 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -363,6 +477,13 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
   - name: SELECT
     type: select
     proxies:
@@ -388,6 +509,13 @@ proxy-groups:
       - *id020
       - *id021
       - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
