--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,12 +6,12 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
     type: vmess
-    server: go.gujuji.top
-    port: 8080
+    server: 104.21.33.130
+    port: 2052
     cipher: auto
-    uuid: bfc47c55-d946-46ca-b09f-5a1b91bae105
+    uuid: 544f2e93-51b0-4d47-fd72-e7d858021bbd
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -19,23 +19,79 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: us-02.gujuji.top
+        host: family.mgtajhiz.ir
   - &id002
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    name: 🇫🇷_FR_法国_1
     type: vmess
-    server: 104.21.4.8
-    port: 2082
+    server: s1.19kala.co
+    port: 443
     cipher: auto
-    uuid: 566b5797-cc52-4417-e25e-25a9fb15e7d4
+    uuid: 5775de7e-0c2e-4e7c-8b9c-c48704d8facb
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /OWTu4RMkF9V12oO5NLlQk
+      headers:
+        host: s1.19kala.co
+  - &id003
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /LOCKEY_VPN
+      path: /
       headers:
-        host: al.zmV2ray.site
-  - &id003
+        host: sbl2.shabijichang.com
+  - &id004
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+    type: vmess
+    server: family.mgtajhiz.ir
+    port: 2052
+    cipher: auto
+    uuid: 544f2e93-51b0-4d47-fd72-e7d858021bbd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: family.mgtajhiz.ir
+  - &id005
+    name: 🇸🇪_SE_瑞典
+    type: vmess
+    server: 94.131.98.90
+    port: 80
+    cipher: auto
+    uuid: 0814badf-f3fc-4f15-b400-4ae8cdce610e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id006
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 89.221.224.12
+    port: 80
+    cipher: auto
+    uuid: 3bc3514c-cbcb-4b08-9797-c62850ae8bb4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id007
     name: 🇮🇳_IN_印度
     type: vmess
     server: 103.113.68.233
@@ -50,21 +106,8 @@ proxies:
       path: /vmess
       headers:
         host: 103.113.68.233
-  - &id004
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: tttt.ssfree.ru
-    port: 443
-    cipher: auto
-    uuid: 2e9c065c-92be-11ee-8580-00163e49219e
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /search
-  - &id005
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+  - &id008
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_3
     type: vmess
     server: ld2.shabijichang.com
     port: 80
@@ -78,282 +121,59 @@ proxies:
       path: /
       headers:
         host: ld2.shabijichang.com
-  - &id006
-    name: 🇺🇸_US_美国_3
-    type: trojan
-    server: 89.116.180.179
-    port: 443
-    udp: true
-    password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: p6us4.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us4
-  - &id007
-    name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国
-    type: vmess
-    server: 158.58.188.21
-    port: 20440
-    cipher: auto
-    uuid: 13f80f39-4724-473d-aed0-8331b133ae2c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id008
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: sbl2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
   - &id009
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10850
-    udp: true
-    password: 6deb9e24-4041-41e3-827b-392b16aa496e
-    sni: alibaba-node.cn
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    type: vmess
+    server: fr-01.jikuai.xyz
+    port: 2082
+    cipher: auto
+    uuid: 5d3e67f9-b611-4076-9136-cc64fd234806
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: fr-01.jikuai.xyz
   - &id010
-    name: 🇺🇸_US_美国_5
+    name: 🇸🇰_SK_斯洛伐克
     type: vmess
-    server: 104.21.75.246
+    server: sk1-vmess.sshmax.xyz
     port: 80
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 06c2b568-b7df-4e80-9031-c83569397db4
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /vmess
       headers:
-        host: sbl2.shabijichang.com
+        host: sk1-vmess.sshmax.xyz
   - &id011
-    name: 🇰🇷_KR_韩国_1
-    type: trojan
-    server: hk3.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 20252
-    udp: true
-    password: 56a00699-1857-46ac-a861-60d3c17e1b9f
-    sni: 13-231-155-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇰🇷_KR_韩国_2
-    type: trojan
-    server: hk2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 20202
-    udp: true
-    password: 5582a559-d68a-484b-bc33-4274bf63c71a
-    sni: 13-231-155-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇺🇸_US_美国_6
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: cf-lt.sharecentre.online
-    port: 80
+    server: v2ray.ibgfw.top
+    port: 2053
     cipher: auto
-    uuid: 2a683a54-f098-4d98-92fc-762b85d907b9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v006.ssrsub.com
-  - &id014
-    name: 🇯🇵_JP_日本
-    type: vmess
-    server: 103.35.188.226
-    port: 80
-    cipher: auto
-    uuid: 098e7cdd-03b4-435d-8c41-ea608fa637c2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 103.35.188.226
-  - &id015
-    name: 🇷🇸_RS_塞尔维亚
-    type: vmess
-    server: 45.89.55.147
-    port: 80
-    cipher: auto
-    uuid: 4c2dbe94-833b-476c-910b-af8b5f3c0123
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id016
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: cfyx3.freeapp.buzz
-    port: 80
-    cipher: auto
-    uuid: a5319baa-e846-43c7-91c2-d67a1e307c8b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: icu2.mac2win.top
-  - &id017
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: usd.yj2022.gq
-    port: 8880
-    cipher: auto
-    uuid: 4b5e4565-322f-4223-a891-78a84f189726
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /XSjeg73o6ZdsheahCb5JG
-      headers:
-        host: usd.yj2022.gq
-  - &id018
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: trojan
-    server: other.kunlun-ppg.com
-    port: 10837
-    udp: true
-    password: 6deb9e24-4041-41e3-827b-392b16aa496e
-    sni: alibaba-node.cn
-    skip-cert-verify: true
-    network: tcp
-  - &id019
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 104.21.40.162
-    port: 443
-    cipher: auto
-    uuid: d196ccc9-db42-475d-a7e4-7c27a6a326d1
+    uuid: 5a5aadc2-8834-4e7b-895b-74ad155fbf24
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: be1.xv2ray.net
-  - &id020
-    name: 🇸🇪_SE_瑞典
-    type: vmess
-    server: 94.131.98.90
-    port: 80
-    cipher: auto
-    uuid: 0814badf-f3fc-4f15-b400-4ae8cdce610e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id021
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: ns1.v2-vip.fun
-    port: 80
-    cipher: auto
-    uuid: 2a683a54-f098-4d98-92fc-762b85d907b9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id022
-    name: 🇺🇦_UA_乌克兰
-    type: vmess
-    server: 45.87.155.70
-    port: 80
-    cipher: auto
-    uuid: 88c0a1fb-fc4d-4eab-85c7-4dd84407e9a5
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 45.87.155.70
-  - &id023
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 89.221.224.12
-    port: 80
-    cipher: auto
-    uuid: 3bc3514c-cbcb-4b08-9797-c62850ae8bb4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id024
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国
-    type: vmess
-    server: nice2.xn-w1yu8o.xyz
-    port: 80
-    cipher: auto
-    uuid: a5319baa-e846-43c7-91c2-d67a1e307c8b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: icu2.mac2win.top
-  - &id025
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+  - &id012
+    name: 🇺🇸_US_美国_3
     type: trojan
-    server: other.kunlun-ppg.com
-    port: 10838
+    server: sg2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
     udp: true
-    password: 6deb9e24-4041-41e3-827b-392b16aa496e
-    sni: alibaba-node.cn
+    password: 5582a559-d68a-484b-bc33-4274bf63c71a
+    sni: sg2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
     skip-cert-verify: true
     network: tcp
-  - &id026
-    name: 🇬🇧_GB_英国
-    type: trojan
-    server: 13.43.245.105
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id027
-    name: 🇺🇸_US_美国_11
+  - &id013
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: 95.164.46.154
     port: 8080
@@ -365,36 +185,86 @@ proxies:
     network: ws
     ws-opts:
       path: /vmess
-  - &id028
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+  - &id014
+    name: 🇭🇰_HK_香港->🇺🇸_US_美国
     type: vmess
-    server: 104.18.202.232
-    port: 8880
-    cipher: auto
-    uuid: e4831af7-c578-45b5-b9b6-a8bbd6d019c9
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /@vpn_whal,@vpn_whal
-      headers:
-        host: gr-allnetwork.whaleproject.tech
-  - &id029
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: singapore.com
+    server: cm1.xn-w1yu8o.xyz
     port: 80
     cipher: auto
-    uuid: 2a683a54-f098-4d98-92fc-762b85d907b9
+    uuid: a5319baa-e846-43c7-91c2-d67a1e307c8b
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /
       headers:
-        host: ssrsub.v005.ssrsub.com
+        host: icu2.mac2win.top
+  - &id015
+    name: 🇭🇰_HK_香港
+    type: vmess
+    server: cm3.xn-w1yu8o.xyz
+    port: 80
+    cipher: auto
+    uuid: e759eadc-8e71-47b0-874e-871e3d8dc31e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu3.mac2win.top
+  - &id016
+    name: 🇺🇸_US_美国_5
+    type: trojan
+    server: 89.116.180.179
+    port: 443
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: p6us4.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us4
+  - &id017
+    name: 🇫🇷_FR_法国_2
+    type: vmess
+    server: 57.129.7.139
+    port: 60240
+    cipher: auto
+    uuid: 84e92b93-93d0-40e4-8b2b-123801eeda44
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇺🇸_US_美国_6
+    type: trojan
+    server: 167.68.5.183
+    port: 443
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: 6us3.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us3
+  - &id019
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: us-02.jikuai.xyz
+    port: 2082
+    cipher: auto
+    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us-02.jikuai.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -440,16 +310,6 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -474,16 +334,6 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
   - name: SELECT
     type: select
     proxies:
@@ -506,16 +356,6 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
-      - *id020
-      - *id021
-      - *id022
-      - *id023
-      - *id024
-      - *id025
-      - *id026
-      - *id027
-      - *id028
-      - *id029
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
